updates after intitial review with Andy